<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="org.treebolic.MainActivity" >

    <item
        android:id="@+id/searchView"
        android:actionViewClass="android.widget.SearchView"
        android:iconifiedByDefault="false"
        android:showAsAction="always"
        android:title="@string/title_search"/>
    <item
        android:id="@+id/action_settings"
        android:showAsAction="ifRoom"
        android:title="@string/title_settings"/>
    <item
        android:id="@+id/action_treebolic"
        android:showAsAction="never"
        android:title="@string/title_treebolic"/>
    <item
        android:id="@+id/action_treebolic_source"
        android:showAsAction="never"
        android:title="@string/title_treebolic_source"/>
    <item
        android:id="@+id/action_treebolic_bundle"
        android:showAsAction="never"
        android:title="@string/title_treebolic_bundle"/>
    <item
        android:id="@+id/action_treebolic_serialized"
        android:showAsAction="never"
        android:title="@string/title_treebolic_serialized"/>
    <item
        android:id="@+id/action_treebolic_client"
        android:showAsAction="never"
        android:title="@string/title_treebolic_client"/>
    <item
        android:id="@+id/action_demo"
        android:showAsAction="never"
        android:title="@string/title_demo"/>
    <item
        android:id="@+id/action_download"
        android:showAsAction="never"
        android:title="@string/title_download"/>
    <item
        android:id="@+id/action_providers"
        android:showAsAction="never"
        android:title="@string/title_activity_providers"/>
    <item
        android:id="@+id/action_services"
        android:showAsAction="never"
        android:title="@string/title_activity_services"/>
    <item
        android:id="@+id/action_rescan"
        android:showAsAction="never"
        android:title="@string/title_rescan"/>
    <item
        android:id="@+id/action_app_settings"
        android:showAsAction="never"
        android:title="@string/title_activity_app_settings"/>
    <item
        android:id="@+id/action_tips"
        android:showAsAction="never"
        android:title="@string/title_tips"/>
    <item
        android:id="@+id/action_help"
        android:showAsAction="never"
        android:title="@string/title_help"/>
    <item
        android:id="@+id/action_about"
        android:showAsAction="never"
        android:title="@string/title_about"/>
    <item
        android:id="@+id/action_finish"
        android:showAsAction="never"
        android:title="@string/title_finish"/>
    <item
        android:id="@+id/action_kill"
        android:showAsAction="never"
        android:title="@string/title_kill"/>
<!--     <item -->
<!--         android:id="@+id/action_test" -->
<!--         android:showAsAction="never" -->
<!--         android:title="@string/action_test"/> -->

</menu>