<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) Treebolic 2019. Bernard Bou <1313ou@gmail.com>
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:orientation="vertical">

	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_gravity="end"
		android:orientation="horizontal">

		<ImageView
			android:id="@+id/icon"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:contentDescription="@string/provider"/>

		<View
			android:layout_width="0dp"
			android:layout_height="0dp"
			android:layout_weight="1"/>

		<CheckBox
			android:id="@+id/plugin"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:clickable="false"
			android:gravity="center_vertical|end"
			android:text="@string/plugin"/>
	</LinearLayout>

	<TextView
		android:id="@+id/provider"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:textStyle="bold"/>

	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal">

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginLeft="20dp"
			android:layout_marginRight="20dp"
			android:minEms="7"
			android:paddingLeft="10dp"
			android:paddingRight="10dp"
			android:text="@string/name"/>

		<TextView
			android:id="@+id/name"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"/>
	</LinearLayout>

	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal">

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginLeft="20dp"
			android:layout_marginRight="20dp"
			android:minEms="7"
			android:paddingLeft="10dp"
			android:paddingRight="10dp"
			android:text="@string/pkg"/>

		<TextView
			android:id="@+id/pkg"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textStyle="italic"/>
	</LinearLayout>

	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal">

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginLeft="20dp"
			android:layout_marginRight="20dp"
			android:minEms="7"
			android:paddingLeft="10dp"
			android:paddingRight="10dp"
			android:text="@string/process"/>

		<TextView
			android:id="@+id/process"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"/>
	</LinearLayout>

	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal">

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginLeft="20dp"
			android:layout_marginRight="20dp"
			android:minEms="7"
			android:paddingLeft="10dp"
			android:paddingRight="10dp"
			android:text="@string/mimetype"/>

		<TextView
			android:id="@+id/mimetype"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"/>
	</LinearLayout>

	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal">

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginLeft="20dp"
			android:layout_marginRight="20dp"
			android:minEms="7"
			android:paddingLeft="10dp"
			android:paddingRight="10dp"
			android:text="@string/extension"/>

		<TextView
			android:id="@+id/extension"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"/>
	</LinearLayout>

	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal">

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginLeft="20dp"
			android:layout_marginRight="20dp"
			android:minEms="7"
			android:paddingLeft="10dp"
			android:paddingRight="10dp"
			android:text="@string/scheme"/>

		<TextView
			android:id="@+id/urlScheme"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"/>
	</LinearLayout>

	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal">

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginLeft="20dp"
			android:layout_marginRight="20dp"
			android:minEms="7"
			android:paddingLeft="10dp"
			android:paddingRight="10dp"
			android:text="@string/source"/>

		<TextView
			android:id="@+id/source"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"/>
	</LinearLayout>

	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal">

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginLeft="20dp"
			android:layout_marginRight="20dp"
			android:minEms="7"
			android:paddingLeft="10dp"
			android:paddingRight="10dp"
			android:text="@string/base"/>

		<TextView
			android:id="@+id/base"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"/>
	</LinearLayout>

	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal">

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginLeft="20dp"
			android:layout_marginRight="20dp"
			android:minEms="7"
			android:paddingLeft="10dp"
			android:paddingRight="10dp"
			android:text="@string/imagebase"/>

		<TextView
			android:id="@+id/imagebase"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"/>
	</LinearLayout>

	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal">

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginLeft="20dp"
			android:layout_marginRight="20dp"
			android:minEms="7"
			android:paddingLeft="10dp"
			android:paddingRight="10dp"
			android:text="@string/settings"/>

		<TextView
			android:id="@+id/settings"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"/>
	</LinearLayout>

	<View
		android:layout_width="fill_parent"
		android:layout_height="2dp"
		android:background="@android:color/darker_gray"/>

</LinearLayout>